# auction-test-design-kata

./: Makefile  README.md  pyproject.toml
src/: auction.py  auction_listener.py
tests/: test_auction.py
